2011-07-25 Kazuhiko
* add grand_grand_parent_specialise_reference related key.

2010-05-05 yo
* Allow several simulation rules to have Mapped Property.

2010-04-07 yusei
* Fix python scripts which ids were wrong.

2010-03-08 tatuya
* Prevent to copy multiple payment conditions at the Delivery After Generation Script of Invoice Transaction. If the payment conditions are multiple, payment transaction builder manage to create too many payment transaction lines.

2010-03-02 yusei
* Remove short title.
* Fix allowed content type setting.

2010-02-10 yo
* Add support for price precision.

2009-12-16 yusei
* Update xml format.

2009-12-15 yusei
* Add default expandable properties to default invoicing rule.

2009-12-14 yusei
* Add use field to invoice line view.

2009-10-16 yusei
* Update for the changes of new portal types of portal types.

2009-09-07 yusuke
* Replace ERP5Report to ERP5Form and ReportBox

2009-09-01 yusuke
* tax_category category is renamed to contribution_share category

2009-08-20 Jérome
* Move out old tax and discount system.

2009-07-09 tatuya
* Append Japanese localized invoice style-sheet  fixing font setting. To avoid hand modification after printing Japanese invoice.

2009-07-03 romain
* Revert latest proxy field library simplification, as the design was not finalized.

2009-06-22 tatuya
* the erp5_invoicing is split into three business templates;
'erp5_invoicing', 'erp5_simplified_invoicing' and
'erp5_advanced_invoicing'.
the erp5_invoicing now only have common invoicing setting.
- When you want  them to work compatible with previous erp5_invoicing
you just install 'erp5_invoicing' and 'erp5_simplified_invoicing'
- When you want to create invoices independently,
you just install 'erp5_invoicing' and 'erp5_advanced_invoicing'.
Note: You can not install both 'erp5_simplified_invoicing' and
'erp5_advanced_invoicing' together. They cause conflicts.
* Move Allowed Content Type  'Discount Line', 'Invoice Line', 'Payment
Condition',