@@ -1,3 +1,6 @@
+2011-10-12 Kazuhiko
+* Fix the issue that a Invoice document can wrongly have a needless Root Applied Rule when it is created by Delivery Builder with a site which has many activity nodes.
+
 2011-07-25 Kazuhiko
 * add grand_grand_parent_specialise_reference related key.
 
